# testTask

./: README.md  config.py  database.py  dist.env  import_data.py  main.py  models.py  pyproject.toml  test.json
docker/: docker-compose.yml
